add project dertaste

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2>My Recent Work</h2>
         <div class="container-project">
             <div class="project-item">
-                <a href="../htmldemo/"><img src="https://cdn.pixabay.com/photo/2017/11/27/21/31/computer-2982270_1280.jpg"
+                <a href="https://dertaste-qh01q3rrv-munyphallas-projects.vercel.app/"><img src="./assets/dertaste.png"
                         alt="1"></a>
             </div>
             <div class="project-item">
