--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2>My Recent Work</h2>
         <div class="container-project">
             <div class="project-item">
-                <a href="https://dertaste-qh01q3rrv-munyphallas-projects.vercel.app/"><img src="./assets/dertaste.png"
+                <a href="dertaste.vercel.app"><img src="./assets/dertaste.png"
                         alt="1"></a>
             </div>
             <div class="project-item">
