change some text and link

--- a/index.html
+++ b/index.html
@@ -37,18 +37,21 @@
             <div class="content">
                 <div class="item">
                     <h2>
-                        Designer
+                        Frontend Developer
                     </h2>
-                    <p>I love simple and clean design, less is more.</p>
+                    <p>I like coding and love to see when it working.</p>
 
-                    <p>Things I design</p>
-                    <p>UX, UI, Web, APPs</p>
+                    <p>Language that I use</p>
+                    <p>HTML, CSS, Javascript, Git</p>
 
-                    <p>Designs Tools:</p>
+                    <p> Dev Tools:</p>
                     <ul>
-                        <li>Figma</li>
-                        <li>Font Awsome</li>
-                        <li>Pen & Paper</li>
+                        <li>Visual Studio Code</li>
+                        <li>Bootstrap</li>
+                        <li>Tailwinds</li>
+                        <li>React.js</li>
+                        <li>Github</li>
+                        <li>Vercel</li>
                     </ul>
                 </div>
                 <hr>
@@ -56,7 +59,7 @@
                     <h2>
                         Designer
                     </h2>
-                    <p>I love simple and clean design, less is more.</p>
+                    <p>I love simple and clean design.</p>
 
                     <p>Things I design</p>
                     <p>UX, UI, Web, APPs</p>
@@ -72,18 +75,30 @@
         </div>
     </section>
     <section class="project">
-        <h2>My Recent Work</h2>
+        <h2>My Recent Work</h2> 
         <div class="container-project">
             <div class="project-item">
-                <a href="dertaste.vercel.app"><img src="./assets/dertaste.png"
+                <a href="https://dertaste.vercel.app/"><img src="./assets/dertaste.png"
+                        alt="1"></a>
+                        <div class="overlay">
+                            <div class="text">
+                                <p>dertaste website</p>
+                                <p>react.js & tailwindcss</p>
+                                <a href="https://dertaste.vercel.app/">
+                                    <button class="btn">
+                                        Visit Website
+                                    </button>
+                                </a>
+                                
+                            </div>
+                          </div>
+            </div>
+            <div class="project-item">
+                <a href="#"><img src="https://cdn.pixabay.com/photo/2017/11/27/21/31/computer-2982270_1280.jpg"
                         alt="1"></a>
             </div>
             <div class="project-item">
-                <a href="../cssdemo/"><img src="https://cdn.pixabay.com/photo/2017/11/27/21/31/computer-2982270_1280.jpg"
-                        alt="1"></a>
-            </div>
-            <div class="project-item">
-                <a href="../homework/"><img src="https://cdn.pixabay.com/photo/2017/11/27/21/31/computer-2982270_1280.jpg"
+                <a href="#"><img src="https://cdn.pixabay.com/photo/2017/11/27/21/31/computer-2982270_1280.jpg"
                         alt="1"></a>
             </div>
             <div class="project-item">
