change footer and hover

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                     </h2>
                     <p>I like coding and love to see when it working.</p>
 
-                    <p>Language that I use</p>
+                    <h5>Language that I use</h5>
                     <p>HTML, CSS, Javascript, Git</p>
 
-                    <p> Dev Tools:</p>
+                    <h5> Dev Tools:</h5>
                     <ul>
                         <li>Visual Studio Code</li>
                         <li>Bootstrap</li>
@@ -61,10 +61,10 @@
                     </h2>
                     <p>I love simple and clean design.</p>
 
-                    <p>Things I design</p>
+                    <h5>Things I design</h5>
                     <p>UX, UI, Web, APPs</p>
 
-                    <p>Designs Tools:</p>
+                    <h5>Designs Tools:</h5>
                     <ul>
                         <li>Figma</li>
                         <li>Font Awsome</li>
@@ -80,7 +80,8 @@
             <div class="project-item">
                 <a href="https://dertaste.vercel.app/"><img src="./assets/dertaste.png"
                         alt="1"></a>
-                        <div class="overlay">
+                        <p>React.js, Tailwindcss & Vercel  </p>
+                        <!-- <div class="overlay">
                             <div class="text">
                                 <p>dertaste website</p>
                                 <p>react.js & tailwindcss</p>
@@ -91,7 +92,7 @@
                                 </a>
                                 
                             </div>
-                          </div>
+                          </div> -->
             </div>
             <div class="project-item">
                 <a href="#"><img src="https://cdn.pixabay.com/photo/2017/11/27/21/31/computer-2982270_1280.jpg"
