add MovieDB to project

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container-project">
             <div class="project-item">
                 <a href="https://dertaste.vercel.app/"><img src="./assets/dertaste.png"
-                        alt="1"></a>
+                        alt="dertaste"></a>
                         <div class="overlay">
                             <div class="text">
                                 <p>dertaste website</p>
@@ -94,8 +94,9 @@
                           </div>
             </div>
             <div class="project-item">
-                <a href="#"><img src="https://cdn.pixabay.com/photo/2017/11/27/21/31/computer-2982270_1280.jpg"
-                        alt="1"></a>
+                <a href="https://movie-db-zero.vercel.app/">
+                    <img src="./assets/Movie-DB.png"
+                        alt="Movie-DB"></a>
             </div>
             <div class="project-item">
                 <a href="#"><img src="https://cdn.pixabay.com/photo/2017/11/27/21/31/computer-2982270_1280.jpg"
